2010-08-22  Marc Mutz  <marc.mutz@kdab.com>

Reviewed by Antonio Gomes.

        [Qt] Actually emit the QWebView::selectionChanged() signal

        https://bugs.webkit.org/show_bug.cgi?id=44252

        * Api/qwebview.cpp:
        (QWebView::setPage): Connect QWebPage::selectionChanged() to QWebView::selectionChanged()

Canonical link: https://commits.webkit.org/56568@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65789 268f45cc-cd09-0410-ab3c-d52691b4dbfc